Allow plugin module read access to dependant plugins which does not contain a module info (#652)
* Allow plugin read access to dependant plugin modules

* Did requested changes and some code cleanup