@@ -7,6 +7,7 @@
 
 package io.gomint.server.plugin;
 
+import com.google.common.collect.ImmutableMap;
 import io.gomint.command.Command;
 import io.gomint.event.Event;
 import io.gomint.event.EventListener;
@@ -31,7 +32,6 @@ import org.objectweb.asm.ModuleVisitor;
 import org.objectweb.asm.Opcodes;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import com.google.common.collect.ImmutableMap;
 
 import java.io.DataInputStream;
 import java.io.File;
@@ -41,9 +41,18 @@ import java.lang.module.Configuration;
 import java.lang.module.ModuleDescriptor;
 import java.lang.module.ModuleFinder;
 import java.lang.reflect.Field;
+import java.lang.reflect.InvocationTargetException;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.*;
+import java.util.ArrayList;
+import java.util.Collection;
+import java.util.Enumeration;
+import java.util.HashMap;
+import java.util.HashSet;
+import java.util.LinkedHashMap;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.jar.JarEntry;
@@ -121,7 +130,12 @@ public class SimplePluginManager implements PluginManager, EventCaller {
 
     public void detectPlugins() {
         // Search the plugins folder for valid .jar files
-        for (File file : this.pluginFolder.listFiles(pathname -> (pathname.getAbsolutePath().endsWith(".jar")))) {
+        File[] possiblePlugins = this.pluginFolder.listFiles(pathname -> pathname.getAbsolutePath().endsWith(".jar"));
+        if (possiblePlugins == null) {
+            return;
+        }
+
+        for (File file : possiblePlugins) {
             PluginMeta metadata = getMetadata(file);
             if (metadata != null) {
                 this.metadata.put(metadata.getName(), metadata);
@@ -209,7 +223,7 @@ public class SimplePluginManager implements PluginManager, EventCaller {
                 // We need to check if the depend plugin is detected
                 for (PluginMeta detectedPlugin : new ArrayList<>(this.detectedPlugins)) {
                     if (detectedPlugin.getName().equals(dependPlugin)) {
-                        loadPlugin(pluginMeta);
+                        loadPlugin(detectedPlugin);
 
                         // Check if the plugin did shutdown the server
                         if (!this.server.isRunning()) {
@@ -242,15 +256,13 @@ public class SimplePluginManager implements PluginManager, EventCaller {
             ModuleLayer bootLayer = ModuleLayer.boot();
 
             Configuration configuration = bootLayer.configuration();
-            Configuration newConfiguration = configuration.resolve(finder, empty, new HashSet<>() {{
-                add(pluginMeta.getModuleName());
-            }});
+            Configuration newConfiguration = configuration.resolve(finder, empty, Set.of(pluginMeta.getModuleName()));
 
             PluginClassloader finalLoader = loader;
-            ModuleLayer.Controller moduleLayerController = ModuleLayer.defineModules(newConfiguration, Collections.singletonList(bootLayer), s -> finalLoader);
+            ModuleLayer.Controller moduleLayerController = ModuleLayer.defineModules(newConfiguration, List.of(bootLayer), s -> finalLoader);
 
             ModuleLayer moduleLayer = moduleLayerController.layer();
-            Module pluginModule = moduleLayer.findModule(pluginMeta.getModuleName()).get();
+            Module pluginModule = moduleLayer.findModule(pluginMeta.getModuleName()).orElseThrow();
             Module currentModule = SimplePluginManager.class.getModule();
 
             for (String aPackage : pluginMeta.getPackages()) {
@@ -261,8 +273,14 @@ public class SimplePluginManager implements PluginManager, EventCaller {
                 currentModule.addExports("io.gomint.server.event", pluginModule);
             }
 
-            ClassLoader mLoader = moduleLayer.findLoader(pluginMeta.getModuleName());
+            // Now collect the modules which the plugin may want to access (if it does not contain a module-info.java)
+            Collection<Module> needsGrant = this.collectDependantModules(pluginMeta);
+            // Grant read access to (soft-) depend plugins which does not contain a module-info.java
+            for (Module module : needsGrant) {
+                moduleLayerController.addReads(pluginModule, module);
+            }
 
+            ClassLoader mLoader = moduleLayer.findLoader(pluginMeta.getModuleName());
             Plugin clazz = (Plugin) constructAndInject(pluginMeta.getMainClass(), mLoader);
             if (clazz == null) {
                 return;
@@ -302,12 +320,45 @@ public class SimplePluginManager implements PluginManager, EventCaller {
         }
     }
 
+    private Collection<Module> collectDependantModules(PluginMeta meta) {
+        if (meta.hasModuleInfo()) {
+            return Set.of();
+        }
+
+        Collection<Module> modules = new ArrayList<>();
+        for (String depend : meta.getDepends()) {
+            PluginMeta pluginMeta = this.metadata.get(depend);
+            if (pluginMeta.hasModuleInfo()) {
+                // The plugin explicitly may want to deny access to some packages (or open them) so skip it
+                continue;
+            }
+
+            modules.add(this.loadedPlugins.get(depend).getClass().getModule()); // Plugin must be loaded because it's a depend
+        }
+
+        for (String softDepend : meta.getSoftDepends()) {
+            PluginMeta pluginMeta = this.metadata.get(softDepend);
+            if (pluginMeta.hasModuleInfo()) {
+                // The plugin explicitly may want to deny access to some packages (or open them) so skip it
+                continue;
+            }
+
+            Plugin plugin = this.loadedPlugins.get(softDepend);
+            if (plugin != null) {
+                // As a soft depend the plugin is not required so nullable
+                modules.add(plugin.getClass().getModule());
+            }
+        }
+
+        return modules;
+    }
+
     private Object constructAndInject(String clazz, ClassLoader loader) {
         try {
             Class<?> cl = loader.loadClass(clazz);
 
             try {
-                Object built = cl.newInstance();
+                Object built = cl.getDeclaredConstructor().newInstance();
 
                 // Check all fields for injection
                 for (Field field : cl.getDeclaredFields()) {
@@ -334,7 +385,9 @@ public class SimplePluginManager implements PluginManager, EventCaller {
                 }
 
                 return built;
-            } catch (InstantiationException | IllegalAccessException e) {
+            } catch (NoSuchMethodException e) {
+                LOGGER.error("Plugin main class {} does not define a no-args constructor", clazz, e);
+            } catch (InstantiationException | IllegalAccessException | InvocationTargetException e) {
                 e.printStackTrace();
             }
         } catch (ClassNotFoundException e) {
@@ -418,8 +471,8 @@ public class SimplePluginManager implements PluginManager, EventCaller {
                             jar.getInputStream(jarEntry).transferTo(toFile);
                         }
 
-                        if ( meta.getModuleDependencies() == null ) {
-                            meta.setModuleDependencies( new HashSet<>() );
+                        if (meta.getModuleDependencies() == null) {
+                            meta.setModuleDependencies(new HashSet<>());
                         }
 
                         meta.getModuleDependencies().add(jarFile);
@@ -435,6 +488,7 @@ public class SimplePluginManager implements PluginManager, EventCaller {
                                 @Override
                                 public ModuleVisitor visitModule(String name, int access, String version) {
                                     meta.setModuleName(name);
+                                    meta.setHasModuleInfo(true);
                                     return super.visitModule(name, access, version);
                                 }
                             }, 0);
@@ -654,7 +708,7 @@ public class SimplePluginManager implements PluginManager, EventCaller {
     }
 
     @Override
-    public Map< String, Plugin > getPlugins() {
+    public Map<String, Plugin> getPlugins() {
         return ImmutableMap.copyOf(this.installedPlugins);
     }
 
